--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ ul {
 input,
 textarea,
 select {
-    border: 2px solid #F34D58;
+    border: 2px solid #44ceef;
     letter-spacing: 1px;
     font-size: 11px;
     padding: 8px 15px;
@@ -124,7 +124,7 @@ input[type="submit"] {
 
 input:focus,
 textarea:focus {
-    border: 2px solid #973846;
+    border: 2px solid #27a6e9;
 }
 
 input[type="submit"]:focus {
@@ -208,10 +208,10 @@ dl {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(120,122,147, .8);
+    background: rgba(45,45,45, .8);
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .5);
     -moz-box-shadow: inset 0 0 6px rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 8px rgba(243,77,88, .5);
+    box-shadow: inset 0 0 8px rgba(68,206,255, .5);
 }
 
 ::-webkit-scrollbar-thumb:window-inactive {
@@ -314,7 +314,7 @@ h6 {
     font-size: 25px;
     letter-spacing: 2px;
     padding: 0 0 100px 0;
-    color: #F34D58;
+    color: #44ceef;
 }
 
 .tab-content .section-title {
@@ -453,7 +453,7 @@ h1.page-title {
 /* text color */
 
 .white-text {
-    color: #FFF !important
+    color: #ffffff !important
 }
 
 .magenta-text {
@@ -505,7 +505,7 @@ h1.page-title {
 }
 
 .gray-text {
-    color: #ffffff !important
+    color: #2d2d2d !important
 }
 
 .dark-gray-text {
@@ -1440,7 +1440,7 @@ p.uppercase a:hover {
     text-decoration: none;
     top: 91%;
     width: auto;
-    background-color: #24273B;
+    background-color: #27a6e9;
     z-index: 555;
     border-radius: 2px;
 }
@@ -1452,7 +1452,7 @@ p.uppercase a:hover {
 }
 
 .scrollToTop:hover {
-    background-color: #787A93;
+    background-color: #44ceff;
 }
 
 .scrollToTop:hover i {
@@ -1622,7 +1622,7 @@ nav .container {
 }
 
 .shrink-nav {
-    background-color: #F34D58;
+    background-color: #ffffff;
 }
 
 .sticky-nav {
@@ -2624,7 +2624,7 @@ nav .container {
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #F34D58;
+    color: #44ceef;
 }
 
 .testimonial-style2 p {
@@ -2635,13 +2635,13 @@ nav .container {
 }
 
 .testimonial-style2 .name {
-    font-size: 11px;
+    font-size: 17px;
     display: block;
     width: 100%;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #F34D58;
+    color: #44ceef;
 }
 
 .testimonial-style2 img {
@@ -6094,17 +6094,17 @@ figure:hover img {
 }
 
 .highlight-button-dark {
-    border: 2px solid #F34D58;
+    border: 2px solid #44ceef;
     display: inline-block;
     padding: 8px 20px 9px;
     font-size: 12px;
     color: #fff;
-    background-color: #F34D58;
+    background-color: #44ceef;
 }
 
 .highlight-button-dark:hover {
-    background-color: #973846;
-    border: 2px solid #F34D58;
+    background-color: #27a6e9;
+    border: 2px solid #44ceef;
     color: #000;
 }
 
@@ -6182,18 +6182,18 @@ figure:hover img {
 }
 
 .btn-black {
-    border: 2px solid #F34D58;
+    border: 2px solid #44ceef;
     color: #fff;
     display: inline-block;
-    background-color: #F34D58;
+    background-color: #44ceef;
     padding: 7px 20px 8px;
     width: auto;
 }
 
 .btn-black:hover {
-    border: 2px solid #F34D58;
+    border: 2px solid #44ceef;
     color: #000;
-    background-color: #973846;
+    background-color: #27a6e9;
 }
 
 .highlight-button-black-border {
@@ -9110,12 +9110,12 @@ thead th.first {
 
 .education-box-main {
     min-height: 350px;
-    border: 2px solid #F34D58;
+    border: 2px solid #44ceef;
     padding: 15px;
 }
 
 .title-number {
-    color: #973846;
+    color: #27a6e9;
     display: block;
     font-size: 55px;
     font-weight: 100;
@@ -10370,17 +10370,20 @@ thead th.first {
 }
 
 .red-text {
-    color: #F34D58;
+    color: #44ceef;
 }
 
 .green-text {
-    color: #559689;
+    color: #27a6e9;
 }
 
 .bg-red {
-    background: #F34D58;
+    background: #27a6e9;
 }
 
 .bg-dark-red {
-    background: #973846;
+    background: #44ceef;
+}
+.white-text2 {
+    color:#ffffff
 }
