--- a/css/style.css
+++ b/css/style.css
@@ -1632,7 +1632,7 @@ nav .container {
 }
 
 .logo {
-    max-width: 109px;
+    max-width: 110px;
 }
 
 .logo-style-2 {
@@ -6197,18 +6197,18 @@ figure:hover img {
 }
 
 .highlight-button-black-border {
-    border: 4px solid #000;
-    background-color: transparent;
+    border: 4px solid #44ceff;
+    background-color: #44ceff;
     font-size: 22px;
     padding: 20px 30px;
-    color: #000;
+    color: #ffffff;
     font-weight: 700
 }
 
 .highlight-button-black-border:hover {
-    border: 4px solid #000;
-    background-color: #000;
-    color: #fff
+    border: 4px solid #44ceef;
+    background-color: #27a6e9;
+    color: #000000
 }
 
 .highlight-button-orange-border {
