feat: color edits

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4086,12 +4086,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default .navbar-nav > li > a {
-    color: #ffffff;
+    color: #44ceef;
 }
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a.active {
-    border-bottom: 2px solid #44ceef;
+    border-bottom: 2px solid #27a6e9;
 }
 
 .black-bg .navbar-nav > li > a:hover,
